# qa_guru_rest_api

./: .gitignore  pyproject.toml
resources/schemas/: login_success.py  post_user.py  register_success.py  update_user.py
tests/: test_api_users.py
