[project]
name = "qa-guru-rest-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Denzel",email = "butmanovich@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selene (>=1.0.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
